--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,8 @@ li {
 .container{
   padding: 0 15px;
   margin: 0 auto;
+  width:1170px;
+
 }
 
 header {
@@ -56,10 +58,50 @@ float: left;
   display: block;
 }
 
-.top-wripper{
+.top-wrapper{
 	padding-top: 200px;
 	padding-bottom: 400px;
 	color: white;
 	background-image: url(img/gmbr2.jpg);
-	background-size: cover;	
+  background-size: cover;
+  text-align:left;	
+}
+
+.top-wrapper h1{
+  opacity:0.7;
+  font-size:45px;
+  letter-spacing:5px ;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.top-wrapper p{
+  opacity:0.7;
+  margin-bottom:3px;
+}
+
+.btn{
+  padding:12px 24px;
+  color:white;
+  display:inline-block;
+  opacity:0.8;
+  border-radius: 4px;
+}
+
+.btn:hover{
+  opacity: 1;
+}
+
+.koleksi{
+  background-color: tomato;
+}
+
+.btn-wrapper{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.btn-wrapper p{
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
