--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,55 +14,57 @@ li {
 }
 
 .container{
+  width: 1170px;
   padding: 0 15px;
-  margin: 0 auto;
-  width:1170px;
-
+  margin: 0;
 }
 
 header {
-  background-color: #2C373E;
-  color: #fff;
-  height: 65px;
+  height: 55px;
   width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 10;
+   background-color:#01374F;
 }
 
-.header-logo {
-  float: left;
-  font-size: 36px;
-  padding-top: 1px;
-  
-}
-
-.header-list li{
-  float: left;
-  padding:10px 30px;	
-}
 
 .logo{
-	width: 124px;
-	margin-top: 10px;
+  width: 99px;
+  margin-top:0;
+  padding-left: 20px;
 }
 
-.header-right1{
-	float: right;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: all 0.5s;
+
+
+.header-left{
+  float: left;
 }
 
-.login{
-	line-height:30px;
-	padding: 0 25px;
-  color: white;
+.header-right{
+  float: left;
+  padding-left: 20px;
+  margin: 0;
+}
+
+.header-right a{
+  list-style: none;
+  float: left;
+  margin-right: 20px;
+  line-height: 50px;
+  padding-left: 20px;
+  padding-right: 15px;
   display: block;
+  padding-bottom: 5px;
+  color: white;
 }
+
+.header-right a:hover{
+  background-color: rgba(255, 255, 255, 0.5);
+
+}
+
 
 .top-wrapper{
 	padding-top: 200px;
-	padding-bottom: 400px;
+	padding-bottom: 180px;
 	color: white;
 	background-image: url(img/gmbr2.jpg);
   background-size: cover;
