--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,12 +22,14 @@ li {
 header {
   height: 55px;
   width: 100%;
-   background-color:#01374F;
+   background-color:#F7F7F7;
+   position: fixed;
+   z-index: 1000;
 }
 
 
 .logo{
-  width: 99px;
+  width: 118px;
   margin-top:0;
   padding-left: 20px;
 }
@@ -53,11 +55,11 @@ header {
   padding-right: 15px;
   display: block;
   padding-bottom: 5px;
-  color: white;
+  color: black;
 }
 
 .header-right a:hover{
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: white;
 
 }
 
