--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,7 +173,7 @@ float: left;
 
 .footer {
     padding: 50px 0 20px 0;
-    background-color: #35404f;
+    background-color: #808080;
     color: #878c94;
 }
 
