--- a/stylesheet.css
+++ b/stylesheet.css
@@ -172,6 +172,7 @@ float: left;
 }
 
 .footer {
+    font-family: "Lucida Grande";
     padding: 50px 0 20px 0;
     background-color: #808080;
     color: #878c94;
