--- a/stylesheet.css
+++ b/stylesheet.css
@@ -174,7 +174,7 @@ float: left;
 .footer {
     font-family: "Lucida Grande";
     padding: 50px 0 20px 0;
-    background-color: #808080;
+    background-color: #F7F7F7;
     color: #878c94;
 }
 
@@ -215,7 +215,7 @@ float: left;
     margin: 1px;
     border-radius:4px;
     margin-top: 6px;
-    background-color: black;
+    background-color: #F7F7F7;
     border: solid 1px #fff;
 }
 
