--- a/stylesheet.css
+++ b/stylesheet.css
@@ -180,9 +180,8 @@ float: left;
     padding-right: 15px;
     display: block;
     padding-bottom: 5px;
-    color: black;
     font-family: 'Courier New', Courier, monospace;
-    background-color: #F7F7F7;
+    background-color: #35404f;
     color: #878c94;
 }
 
