--- a/stylesheet.css
+++ b/stylesheet.css
@@ -176,7 +176,13 @@ float: left;
     background-color: #35404f;
     color: #878c94;
 }
-.footer .title{text-align: left;color:#fff;font-size:25px;}
+
+.footer .title {
+  text-align: left;
+  color: #fff;
+  font-size: 25px;
+}
+
 .btn-wrapper p {
   margin: 10px 0;
 }
@@ -194,13 +200,7 @@ float: left;
   background-color: #55acee;
 }
 
-.footer .social-icon{padding:0px;margin:0px;}
-.footer .social-icon a{display:inline-block;color:#fff;font-size:25px;padding:5px;}
-.footer .acount-icon a{display:block;color:#fff;font-size:18px;padding:5px;text-decoration:none;}
-.footer .acount-icon .fa{margin-right:25px;}
-
-
-.footer .category a {
+.footer-category a {
     text-decoration: none;
     color: #fff;
     display: inline-block;
@@ -210,15 +210,4 @@ float: left;
     margin-top: 6px;
     background-color: black;
     border: solid 1px #fff;
-}
-
-.footer .payment{margin:0px;padding:0px;list-style-type:none}
-.footer .payment li{list-style-type:none}
-.footer .payment li a {
-    text-decoration: none;
-    display: inline-block;
-    color: #fff;
-    float: left;
-    font-size: 25px;
-    padding: 10px 10px;
 }
