--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,9 @@ body {
   margin: 0;
   font-family: "Lucida Grande";
 }
-
+*{
+  box-sizing: border-box;
+}
 a {
   text-decoration: none;
 }
@@ -37,7 +39,7 @@ header{
 }
 
 .header-right{
-  float: left;
+  float: right;
   padding-left: 20px;
   margin: 0;
 }
@@ -45,10 +47,10 @@ header{
 .header-right a{
   list-style: none;
   float: left;
-  margin-right: 20px;
+  margin-right: 5px;
   line-height: 50px;
   padding-left: 20px;
-  padding-right: 15px;
+  padding-right: 25px;
   display: block;
   padding-bottom: 5px;
   color: black;
@@ -60,7 +62,11 @@ header{
 /*rgba(255, 255, 255, 0.5)*/
 }
 .top-wrapper{
-  background-image: url(img/gmbr2.jpg);
+  background:linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+        ),
+        url(img/gmbr2.1.jpg);
   padding-top: 130px;
   padding-bottom: 180px;
   color: white;
@@ -104,43 +110,59 @@ header{
   font-style: italic;
 
 }
-
+/*KONTEN*/
+.judul{
+  margin:0;
+}
 .lesson-wrapper{
-  height:450px;
-  padding-bottom: 80px;
+  margin:0;
+  height:600px;
+  padding: 30px;
   background-color:#f7f7f7 ;
 }
 
 .heading{
   padding-top:30px;
   padding-bottom:20px;
+  display: block;
+  width: 100%;
   color:#5f5d60;
+}
+.heading h2{
+  text-align: center;
+}
+.lessons{
+  padding: 20px;
+}
+.lesso{
+  padding: 10px;
+  border: 2px solid #727373;
 }
 
 .lesson{
-  padding-top: 30px;
-  padding-bottom:30px;
+  padding:20px;
   width: 25%;
   float: left;
-
 }
 
-.lesson-icon img{
+.lesson-icon{
   position: relative;
+  margin: auto;
   width: 50%;
-  height: 200px;
-  padding-left: 150px;
 }
 
-.lesson p{
- padding-left: 150px;
+.lesso p{
+  text-align: center;
 }
-
 .beli{
-  background-color: tomato;
-  margin-left: 150px;
+  padding:12px 24px;
+  background-color: red;
   color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
 }
+/*END*/
 
 .second-wrapper{
   height:300px;
@@ -170,6 +192,54 @@ float: left;
   height: 200px;
   background-color: #f4f4f4;
 }
+/*ABOUT US*/
+.team{
+  margin: 20px;
+}
+.containe{
+  padding:20px;
+  float: left;
+  width: 25%;
+}
+.contain {
+  position: relative;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .5s ease;
+}
+
+.contain:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+/*END*/
 
 .footer {
     padding: 50px 0 20px 0;
